--- a/client/dormdash/package.json
+++ b/client/dormdash/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^17.0.0",
     "dotenv": "^10.0.0",
     "formik": "^2.2.9",
+    "framer-motion": "^4.1.17",
     "jup": "^0.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
