--- a/client/dormdash/package.json
+++ b/client/dormdash/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "recharts": "^2.1.6",
     "styled-components": "^5.3.3",
     "swiper": "^6.8.4",
     "typescript": "^4.1.2",
