--- a/client/dormdash/package.json
+++ b/client/dormdash/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.4.17",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@lottiefiles/react-lottie-player": "^3.4.1",
@@ -20,6 +21,7 @@
     "dotenv": "^10.0.0",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
+    "graphql": "^16.0.1",
     "jup": "^0.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
