--- a/client/dormdash/package.json
+++ b/client/dormdash/package.json
@@ -29,6 +29,7 @@
     "jup": "^0.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
@@ -64,6 +65,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.4",
     "@types/react-router-dom": "^5.3.1",
     "@types/styled-components": "^5.1.15"
   }
