--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "swiper": "^6.8.4",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "zustand": "^3.6.6"
   },
   "scripts": {
     "start": "react-scripts start",
